# rustracer

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/components/: camera.rs
src/geometry/: geometry_trait.rs  mod.rs  sphere.rs  world.rs
src/linalg/: color.rs  point.rs  ray.rs  vector.rs
src/perf/: macros.rs
src/util/: converter.rs  hit_record.rs  interval.rs  mod.rs
