[package]
name = "rustracer"
authors = ["Yechan Jun <wjsdPcks34@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "raytracer"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
image = "0.24.8"
log = "0.4.20"
rand = "0.8.5"
